# python-project-template

./: .dockerignore  .mypy.ini  .pre-commit-config.yaml  CITATION.cff   CLAUDE.md  CONTRIBUTING  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: initialize.sh
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: continuous_delivery.yaml  continuous_delivery.yml  continuous_integration.yml  python_cd  python_ci.yml
docker/: start.sh
docs/getting_started/: contributing.md  installation.md  overview.md
docs/scripts/: gen_ref_pages.py
