[project]
name = "project_name"  # TODO
description = "Template for python project"  # TODO
version = "0.0.1"
license = "MIT"  # TODO
authors = [
    { name = "Paul-B98", email = "115164840+Paul-B98@users.noreply.github.com" }  # TODO
]
maintainers = [
    { name = "Paul-B98", email = "115164840+Paul-B98@users.noreply.github.com" }  # TODO
]
readme = "README.md"
keywords = ["Python Lib"]  # TODO
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.14"

[project.urls]
homepage = "https://github.com/Paul-B98/python-project-template"  # TODO
repository = "https://github.com/Paul-B98/python-project-template"  # TODO
changelog = "https://github.com/Paul-B98/python-project-template/releases"  # TODO
issues = "https://github.com/Paul-B98/python-project-template/issues"  # TODO
documentation = "https://github.com/Paul-B98/python-project-template/wiki"  # TODO

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.5.6",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-github-actions-annotate-failures>=0.4.0",
    "pytest-random-order>=1.2.0",
    "pytest-recording>=0.13.4",
    "ruff>=0.15.10",
    "ty>=0.0.31",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.6",
    "mkdocs-section-index>=0.3.12",
    "mkdocstrings-python>=2.0.3",
    "pymdown-extensions>=10.21.2",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = ["src"]
cache_dir = "/workspaces/.cache/pytest"
addopts = [
    "--cov",
    "--cov-branch",
    "--cov=src",
    "--cov-report=xml",
    "--import-mode=importlib",
]
